Set docker environment

--- a/www/.env.example
+++ b/www/.env.example
@@ -14,8 +14,8 @@ SP_PUBLIC_URL=                  #Es. http://192.168.0.5 or https://media.domain.
 
 #Ports
 SP_CORE_PORT=5092               #Python Flask port
-SP_WEBUI_PORT=8092              #WebUI/API port (change also SP_APP_URL)
-SP_MEDIACENTER_PORT=8096        #Jellyfin media center port
+SP_WEBUI_PORT=8095              #WebUI/API port (change also SP_APP_URL)
+SP_MEDIACENTER_PORT=8097        #Jellyfin media center port
 
 
 #Database
@@ -32,3 +32,4 @@ SP_APP_ENV=local
 SP_APP_DEBUG=true
 SP_APP_URL=http://localhost:8092
 SP_APP_CACHE_DRIVER=file
+WEBDRIVER_CHROME_DRIVER=/usr/local/bin/chromedriver
