--- a/src/default.conf
+++ b/src/default.conf
@@ -1,5 +1,7 @@
 server {
-    listen 80;
+    listen 8095;
+    listen [::]:8095;
+
     index index.php index.html;
     root /var/www/public;
 
@@ -10,10 +12,30 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+
+    listen 8097;
+    listen [::]:8097;
+
+    location / {
+        if ($arg_searchTerm) {
+            proxy_pass http://127.0.0.1:8095;
+            break;
+        }
+
+        proxy_buffering off;
+        proxy_pass http://127.0.0.1:8096;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
