--- a/www/composer.json
+++ b/www/composer.json
@@ -6,7 +6,12 @@
     "type": "project",
     "require": {
         "php": "^8.0",
-        "laravel/lumen-framework": "^9.0"
+        "ext-zlib": "*",
+        "guzzle/http": "^3.9",
+        "guzzlehttp/guzzle": "^7.9",
+        "laravel/lumen-framework": "^9.0",
+        "php-webdriver/webdriver": "^1.1",
+        "symfony/dom-crawler": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
