--- a/src/default.conf
+++ b/src/default.conf
@@ -18,10 +18,24 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
+    location /jellyfin {
+        proxy_buffering off;
+        proxy_pass http://127.0.0.1:8097;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        if ($request_uri ~ ^/jellyfin$) {
+            return 301 /jellyfin/;
+        }
+
+        rewrite ^/jellyfin(/.*)$ $1 break;
+    }
 }
 
 server {
-
     listen 8097;
     listen [::]:8097;
 
