--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
 user=www-data
-logfile=/var/log/supervisor/supervisord.log
+logfile=/var/log/supervisord.log
 logfile_maxbytes = 50MB
 pidfile=/tmp/supervisord.pid
 directory = /tmp
@@ -12,8 +12,8 @@ command=/usr/local/sbin/php-fpm
 numprocs=1
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/supervisor/php-fpm.err.log
-stdout_logfile=/var/log/supervisor/php-fpm.out.log
+stderr_logfile=/var/log/php-fpm.err.log
+stdout_logfile=/var/log/php-fpm.out.log
 user=www-data
 priority=1
 
@@ -22,8 +22,8 @@ command=/usr/sbin/nginx -g "daemon off;"
 numprocs=1
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/nginx/nginx.err.log
-stdout_logfile=/var/log/nginx/nginx.out.log
+stderr_logfile=/var/log/nginx.err.log
+stdout_logfile=/var/log/nginx.out.log
 logfile_maxbytes = 50MB
 user=www-data
 priority=2
@@ -35,8 +35,8 @@ numprocs=1
 autostart=true
 autorestart=true
 startretries=3
-stderr_logfile=/var/log/jellyfin/jellyfin.err.log
-stdout_logfile=/var/log/jellyfin/jellyfin.out.log
+stderr_logfile=/var/log/jellyfin.err.log
+stdout_logfile=/var/log/jellyfin.out.log
 logfile_maxbytes=50MB
 user=www-data
 priority=3
@@ -62,6 +62,17 @@ user=www-data
 stdout_logfile=/var/log/laravel_worker.out.log
 stderr_logfile=/var/log/laravel_worker.err.log
 priority=5
+
+[program:mammamia]
+command=/data/env/bin/python3 /data/env/lib/python3.11/site-packages/MammaMia/run.py
+process_name=%(program_name)s
+autostart=true
+autorestart=true
+numprocs=1
+user=www-data
+stderr_logfile=/var/log/mammamia.err.log
+stdout_logfile=/var/log/mammamia.out.log
+priority=6
 
 
 [include]
