Updated IMDB Api + Jellyfin Search Integration

--- a/src/php.ini
+++ b/src/php.ini
@@ -943,7 +943,7 @@ default_socket_timeout = 60
 ; See https://www.php.net/manual/en/snmp.installation.php
 ;extension=snmp
 
-extension=soap
+;extension=soap
 ;extension=sockets
 ;extension=sodium
 ;extension=sqlite3
