--- a/src/default.conf
+++ b/src/default.conf
@@ -41,7 +41,14 @@ server {
     listen [::]:8097;
 
     location / {
+        set $should_proxy_to_8095 0;
         if ($arg_searchTerm) {
+            set $should_proxy_to_8095 1;
+        }
+        if ($arg_spCall) {
+            set $should_proxy_to_8095 0;
+        }
+        if ($should_proxy_to_8095) {
             proxy_pass http://127.0.0.1:8095;
             break;
         }
