--- a/www/composer.json
+++ b/www/composer.json
@@ -6,12 +6,17 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "ext-curl": "*",
+        "ext-dom": "*",
+        "ext-libxml": "*",
+        "ext-simplexml": "*",
         "ext-zlib": "*",
+        "digitickets/lalit": "^3.4",
         "guzzle/http": "^3.9",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/lumen-framework": "^9.0",
         "php-webdriver/webdriver": "^1.1",
-        "symfony/dom-crawler": "^7.1"
+        "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
