Fix jellyfin setup

--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -41,6 +41,18 @@ logfile_maxbytes=50MB
 user=www-data
 priority=3
 
+[program:jellyfin-setup]
+command=php /var/www/artisan jellyfin:setup
+process_name=%(program_name)s
+numprocs=1
+autostart=true
+autorestart=false
+stderr_logfile=/var/log/jellyfin-setup.err.log
+stdout_logfile=/var/log/jellyfin-setup.out.log
+logfile_maxbytes=50MB
+user=www-data
+priority=4
+
 [program:laravel-scheduler]
 command=/bin/sh -c "while [ true ]; do (php /var/www/artisan schedule:run --verbose --no-interaction &); sleep 60; done"
 process_name=%(program_name)s_%(process_num)02d
@@ -50,7 +62,7 @@ numprocs=1
 user=www-data
 stderr_logfile=/var/log/laravel_scheduler.err.log
 stdout_logfile=/var/log/laravel_scheduler.out.log
-priority=4
+priority=5
 
 [program:laravel-worker]
 command=php /var/www/artisan queue:work --sleep=3 --tries=3
@@ -61,18 +73,18 @@ numprocs=1
 user=www-data
 stdout_logfile=/var/log/laravel_worker.out.log
 stderr_logfile=/var/log/laravel_worker.err.log
-priority=5
-
-[program:mammamia]
-command=/data/env/bin/python3 /data/env/lib/python3.11/site-packages/MammaMia/run.py
-process_name=%(program_name)s
-autostart=true
-autorestart=true
-numprocs=1
-user=www-data
-stderr_logfile=/var/log/mammamia.err.log
-stdout_logfile=/var/log/mammamia.out.log
 priority=6
+
+#[program:mammamia]
+#command=/data/env/bin/python3 /data/env/lib/python3.11/site-packages/MammaMia/run.py
+#process_name=%(program_name)s
+#autostart=true
+#autorestart=true
+#numprocs=1
+#user=www-data
+#stderr_logfile=/var/log/mammamia.err.log
+#stdout_logfile=/var/log/mammamia.out.log
+#priority=6
 
 
 [include]
