Added Streamio Addons Support

--- a/src/default.conf
+++ b/src/default.conf
@@ -41,14 +41,21 @@ server {
     listen [::]:8097;
 
     location / {
-        set $should_proxy_to_8095 0;
+        set $proxy_to_sp 0;
         if ($arg_searchTerm) {
-            set $should_proxy_to_8095 1;
+            set $proxy_to_sp 1;
         }
+        if ($uri = /Plugins) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri = /Packages) {
+            set $proxy_to_sp 1;
+        }
+
         if ($arg_spCall) {
-            set $should_proxy_to_8095 0;
+            set $proxy_to_sp 0;
         }
-        if ($should_proxy_to_8095) {
+        if ($proxy_to_sp) {
             proxy_pass http://127.0.0.1:8095;
             break;
         }
