--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -46,6 +46,7 @@ command=php /var/www/artisan jellyfin:setup
 process_name=%(program_name)s
 numprocs=1
 autostart=true
+startretries=0
 autorestart=false
 stderr_logfile=/var/log/jellyfin-setup.err.log
 stdout_logfile=/var/log/jellyfin-setup.out.log
