Full Jellyfin Search with add to library

--- a/src/default.conf
+++ b/src/default.conf
@@ -52,6 +52,34 @@ server {
             set $proxy_to_sp 1;
         }
 
+        #Items Routes
+        if ($uri ~ ^/Items/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Items/([^/]+)/Images/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Items/([^/]+)/ThemeMedia$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Items/([^/]+)/Similar$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Items/([^/]+)/PlaybackInfo$) {
+            set $proxy_to_sp 1;
+        }
+
+        #User routes
+        if ($uri ~ ^/Users/([^/]+)/Items/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Users/([^/]+)/Items/([^/]+)/PlaybackInfo$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Users/([^/]+)/FavoriteItems/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+
         if ($arg_spCall) {
             set $proxy_to_sp 0;
         }
