--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     hostname: streamingplusapp
     restart: unless-stopped
     environment:
-      - LANG=it
+      - PUID=1000
+      - GUID=1000
+      - TIMEZONE=Europe/Rome
     volumes:
       - ./www:/var/www          #Questo lo mappo solo per non buildare ogni volta
       - ./src:/var/src          #Questo lo mappo solo per non buildare ogni volta
       - ./data:/data
     ports:
-      - "8095:8095"
-      - "8097:8097"
-      - "8098:8080"
+      - "8096:8096"
       #devices:
       #- /dev/dri:/dev/dri
