Torrent stream server

--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -76,6 +76,19 @@ stdout_logfile=/var/log/laravel_worker.out.log
 stderr_logfile=/var/log/laravel_worker.err.log
 priority=6
 
+[program:torrent-stream-server]
+command=torrent-stream-server serve
+process_name=%(program_name)s
+numprocs=1
+autostart=true
+autorestart=true
+startretries=3
+stderr_logfile=/var/log/torrent-stream-server.err.log
+stdout_logfile=/var/log/torrent-stream-server.out.log
+logfile_maxbytes=50MB
+user=www-data
+priority=7
+
 #[program:mammamia]
 #command=/data/env/bin/python3 /data/env/lib/python3.11/site-packages/MammaMia/run.py
 #process_name=%(program_name)s
