Update Jellyfin Api

--- a/src/default.conf
+++ b/src/default.conf
@@ -65,6 +65,14 @@ server {
             set $proxy_to_sp 1;
         }
 
+        #Other routes
+        if ($uri ~ ^/Startup/User$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Library/VirtualFolders$) {
+            set $proxy_to_sp 1;
+        }
+
         if ($arg_spCall) {
             set $proxy_to_sp 0;
         }
