--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -29,7 +29,7 @@ user=www-data
 priority=2
 
 [program:jellyfin]
-command=/usr/lib/jellyfin/bin/jellyfin --datadir /data/jellyfin --cachedir /data/jellyfin/cache --webdir=/usr/share/jellyfin/web --ffmpeg=/usr/lib/jellyfin-ffmpeg/ffmpeg
+command=/usr/lib/jellyfin/bin/jellyfin --datadir=/data/jellyfin --cachedir=/data/jellyfin/cache --webdir=/usr/share/jellyfin/web --ffmpeg=/usr/lib/jellyfin-ffmpeg/ffmpeg
 process_name=%(program_name)s
 numprocs=1
 autostart=true
@@ -40,19 +40,6 @@ stdout_logfile=/var/log/jellyfin.out.log
 logfile_maxbytes=50MB
 user=www-data
 priority=3
-
-[program:jellyfin-setup]
-command=php /var/www/artisan jellyfin:setup
-process_name=%(program_name)s
-numprocs=1
-autostart=true
-startretries=0
-autorestart=false
-stderr_logfile=/var/log/jellyfin-setup.err.log
-stdout_logfile=/var/log/jellyfin-setup.out.log
-logfile_maxbytes=50MB
-user=www-data
-priority=4
 
 [program:laravel-scheduler]
 command=/bin/sh -c "while [ true ]; do (php /var/www/artisan schedule:run --verbose --no-interaction &); sleep 60; done"
@@ -83,22 +70,11 @@ numprocs=1
 autostart=true
 autorestart=true
 startretries=3
-stderr_logfile=/var/log/torrent-stream-server.err.log
-stdout_logfile=/var/log/torrent-stream-server.out.log
+stderr_logfile=/var/log/torrent_stream_server.err.log
+stdout_logfile=/var/log/torrent_stream_server.out.log
 logfile_maxbytes=50MB
 user=www-data
 priority=7
-
-#[program:mammamia]
-#command=/data/env/bin/python3 /data/env/lib/python3.11/site-packages/MammaMia/run.py
-#process_name=%(program_name)s
-#autostart=true
-#autorestart=true
-#numprocs=1
-#user=www-data
-#stderr_logfile=/var/log/mammamia.err.log
-#stdout_logfile=/var/log/mammamia.out.log
-#priority=6
 
 
 [include]
