--- a/src/default.conf
+++ b/src/default.conf
@@ -19,14 +19,32 @@ server {
         fastcgi_read_timeout 600;
         include fastcgi_params;
     }
+
+    access_log  /var/log/nginx/sp-access.log;
+    error_log  /var/log/nginx/sp-error.log;
 }
 
 server {
     listen 8096;
     listen [::]:8096;
 
+    location /emby {
+        rewrite ^/emby(/.*)$ $1 break;
+
+        proxy_pass http://127.0.0.1:8096;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
         set $proxy_to_sp 0;
+
+        if ($uri ~ ^/stream$) {
+            set $proxy_to_sp 1;
+        }
+
         if ($arg_searchTerm) {
             set $proxy_to_sp 1;
         }
@@ -55,8 +73,17 @@ server {
         }
 
         #User routes
+        if ($uri ~ ^/Users/([^/]+)/Items$) {
+            set $proxy_to_sp 1;
+        }
         if ($uri ~ ^/Users/([^/]+)/Items/([^/]+)$) {
             set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Users/([^/]+)/Items/Resume$) {
+            set $proxy_to_sp 0;
+        }
+        if ($uri ~ ^/Users/([^/]+)/Items/Latest$) {
+            set $proxy_to_sp 0;
         }
         if ($uri ~ ^/Users/([^/]+)/Items/([^/]+)/PlaybackInfo$) {
             set $proxy_to_sp 1;
@@ -70,6 +97,9 @@ server {
             set $proxy_to_sp 1;
         }
         if ($uri ~ ^/Library/VirtualFolders$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Videos/([^/]+)/([^/]+)$) {
             set $proxy_to_sp 1;
         }
 
@@ -88,4 +118,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    access_log  /var/log/nginx/jellyfin-access.log;
+    error_log  /var/log/nginx/jellyfin-error.log;
 }
