Added Torrent Stream server

--- a/src/default.conf
+++ b/src/default.conf
@@ -32,7 +32,19 @@ server {
         rewrite ^/emby(/.*)$ $1 break;
 
         proxy_pass http://127.0.0.1:8096;
-        proxy_set_header Host $host;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header Port $server_port;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location ~ ^/stream-torrent/(.*)$ {
+        rewrite ^/stream-torrent/(.*)$ /stream/$1 break;
+        proxy_pass http://127.0.0.1:3000;
+
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header Port $server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -113,7 +125,8 @@ server {
 
         proxy_buffering off;
         proxy_pass http://127.0.0.1:8097;
-        proxy_set_header Host $host;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header Port $server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
