--- a/www/composer.json
+++ b/www/composer.json
@@ -14,6 +14,7 @@
         "digitickets/lalit": "^3.4",
         "guzzle/http": "^3.9",
         "guzzlehttp/guzzle": "^7.9",
+        "illuminate/session": "^9.52",
         "laravel/lumen-framework": "^9.0",
         "php-webdriver/webdriver": "^1.1",
         "symfony/css-selector": "^7.2",
