--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,15 @@
-/data
-/www/vendor
-/www/Subtitle Edit
-/www/.aspnet
 /.idea
 /.git
-.gitignore
+/data
+/www/vendor
+/www/node_modules
+/www/.aspnet
+/www/Subtitle Edit
+/www/.env
+/www/storage/app
+/www/storage/framework/cache
+/www/storage/logs
+/src/jellyfin-web
 .env
 docker-compose.yml
+README.md
