--- a/src/default.conf
+++ b/src/default.conf
@@ -111,9 +111,9 @@ server {
         if ($uri ~ ^/Library/VirtualFolders$) {
             set $proxy_to_sp 1;
         }
-        if ($uri ~ ^/Videos/([^/]+)/([^/]+)$) {
-            set $proxy_to_sp 1;
-        }
+        #if ($uri ~ ^/Videos/([^/]+)/([^/]+)$) {
+        #    set $proxy_to_sp 1;
+        #}
 
         if ($arg_spCall) {
             set $proxy_to_sp 0;
