--- a/src/default.conf
+++ b/src/default.conf
@@ -108,6 +108,16 @@ server {
         if ($uri ~ ^/Library/VirtualFolders$) {
             set $proxy_to_sp 1;
         }
+        if ($uri ~ ^/System/Info/Public$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/system/info/public$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/System/Configuration/network$) {
+            set $proxy_to_sp 1;
+        }
+
 
         if ($arg_spCall) {
             set $proxy_to_sp 0;
