--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,16 @@
-/.idea
-/.git
-/data
-/www/vendor
-/www/bin
-/www/node_modules
-/www/.aspnet
-/www/Subtitle Edit
-/www/.env
-/www/storage/app
-/www/storage/framework/cache
-/www/storage/logs
-/src/jellyfin-web
+.DS_Store
+.idea
+.git
+data
+www/vendor
+www/bin
+www/node_modules
+www/.aspnet
+www/Subtitle Edit
+www/.env
+www/storage/app
+www/storage/framework/cache
+www/storage/logs
+src/jellyfin-web
 .env
 docker-compose.yml
-README.md
