minor fixes + task manager

--- a/src/default.conf
+++ b/src/default.conf
@@ -101,6 +101,25 @@ server {
             set $proxy_to_sp 1;
         }
 
+        #Api keys routes
+        if ($uri ~ ^/Auth/Keys$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Auth/Keys/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+
+        #Schedule tasks routes
+        if ($uri ~ ^/ScheduledTasks$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/ScheduledTasks/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/ScheduledTasks/Running/([^/]+)$) {
+            set $proxy_to_sp 1;
+        }
+
         #Other routes
         if ($uri ~ ^/Startup/User$) {
             set $proxy_to_sp 1;
