Fix for Findroid & Infuse

--- a/src/default.conf
+++ b/src/default.conf
@@ -74,6 +74,9 @@ server {
         if ($uri ~ ^/Items/([^/]+)/Images/([^/]+)$) {
             set $proxy_to_sp 1;
         }
+        if ($uri ~ ^/Items/([^/]+)/Download) {
+            set $proxy_to_sp 1;
+        }
         if ($uri ~ ^/Items/([^/]+)/ThemeMedia$) {
             set $proxy_to_sp 1;
         }
@@ -81,6 +84,9 @@ server {
             set $proxy_to_sp 1;
         }
         if ($uri ~ ^/Items/([^/]+)/PlaybackInfo$) {
+            set $proxy_to_sp 1;
+        }
+        if ($uri ~ ^/Videos/([^/]+)/stream$) {
             set $proxy_to_sp 1;
         }
 
