Fix for Third parts apps

--- a/src/default.conf
+++ b/src/default.conf
@@ -53,10 +53,6 @@ server {
     location / {
         set $proxy_to_sp 0;
 
-        if ($uri ~ ^/stream$) {
-            set $proxy_to_sp 1;
-        }
-
         if ($arg_searchTerm) {
             set $proxy_to_sp 1;
         }
@@ -84,9 +80,6 @@ server {
             set $proxy_to_sp 1;
         }
         if ($uri ~ ^/Items/([^/]+)/PlaybackInfo$) {
-            set $proxy_to_sp 1;
-        }
-        if ($uri ~ ^/Videos/([^/]+)/stream$) {
             set $proxy_to_sp 1;
         }
 
@@ -143,10 +136,29 @@ server {
             set $proxy_to_sp 1;
         }
 
+        #Infuse
+        if ($http_user_agent ~* "^Infuse") {
+            set $proxy_to_sp 0;
+        }
+        #Swiftfin
+        if ($http_user_agent ~* "^Swiftfin") {
+            set $proxy_to_sp 0;
+        }
+        #Findroid
+        if ($http_user_agent ~* "^Ktor client") {
+            set $proxy_to_sp 0;
+        }
 
+        #Stream
+        if ($uri ~ ^/stream$) {
+            set $proxy_to_sp 1;
+        }
+
+        #Exception
         if ($arg_spCall) {
             set $proxy_to_sp 0;
         }
+        proxy_set_header X-Proxy-To-SP $proxy_to_sp;
         if ($proxy_to_sp) {
             proxy_pass http://127.0.0.1:8095;
             break;
